# MyPlayer

./: settings.gradle
app/: build.gradle
app/nativelib/: build.gradle
app/nativelib/libs/include/libavcodec/: avcodec.h  version.h
app/nativelib/libs/include/libavformat/: avformat.h  version.h
app/nativelib/libs/include/libavutil/: ffversion.h
app/nativelib/libs/include/libswresample/: swresample.h  version.h
app/nativelib/libs/include/libswscale/: version.h
app/nativelib/src/androidTest/java/cn/lee/nativelib/: ExampleInstrumentedTest.kt
app/nativelib/src/main/: AndroidManifest.xml
app/nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
app/nativelib/src/main/java/cn/lee/nativelib/: NativeLib.kt
app/nativelib/src/test/java/cn/lee/nativelib/: ExampleUnitTest.kt
app/src/androidTest/java/cn/lee/myplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/lee/myplayer/: MainActivity.kt  TestJNI.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/lee/myplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
